--- a/posts/blog-markdown.mdx
+++ b/posts/blog-markdown.mdx
@@ -3,6 +3,7 @@ emoji: "🏷️"
 title: "블로그에서 사용할 수 있는 양식"
 publishedAt: "2024-10-26"
 summary: "마크다운을 포함해 블로그에서 사용할 수 있는 양식을 모두 정리해보자"
+image: "gradient.jpg"
 ---
 
 나중에 글을 작성하면서 참고할 수 있도록 블로그에서 사용할 수 있는 양식들을 정리해보았다.
