post: 블로그 글 추가

--- a/posts/blog-markdown.mdx
+++ b/posts/blog-markdown.mdx
@@ -3,7 +3,7 @@ emoji: "🏷️"
 title: "블로그에서 사용할 수 있는 양식"
 publishedAt: "2024-10-26"
 summary: "마크다운을 포함해 블로그에서 사용할 수 있는 양식을 모두 정리해보자"
-tags: 마크다운, 블로그
+tags: "마크다운, 블로그"
 image: "gradient.jpg"
 ---
 
