--- a/posts/static-typing.mdx
+++ b/posts/static-typing.mdx
@@ -3,7 +3,7 @@ emoji: "🧑"
 title: "객체를 불변하게 만드는 것이란?(feat.getOwnPropertyDescriptor())"
 publishedAt: "2024-04-07"
 summary: "In the ever-evolving landscape of software development, the debate between dynamic and static typing continues to be a hot topic."
-tags: 마크다운, 블로그
+tags: "마크다운, 블로그"
 ---
 
 자바스크립트 개발을 하다 보면, 객체를 불변하게 만들어야 하는 경우가 종종 발생한다. 이런 상황에서 보통 우리가 사용하는 방법이 바로 Object.freeze()다. 그러나 단순히 Object.freeze()를 호출하는 것이 객체를 불변하게 만드는 이유일까? 사실 객체가 불변하다는 것은 객체가 가진 내부 속성에 따라 달라진다. 이번 글에서는 이 내부 속성에 대해 알아보겠다!
