--- a/posts/bbiyakton.mdx
+++ b/posts/bbiyakton.mdx
@@ -97,7 +97,7 @@ image: "bbiyakton/1.png"
 
 ### 완벽한 것보다 완성된 것이 낫다
 
-개발 과정에서 팀원이 서비스의 안정성을 높이기 위해 예외 처리에 많은 시간을 투자했습니다. 특히, 다음 날 다른 참가자들이 서비스를 직접 사용해볼 수 있었기 때문에 안정성도 중요한 요소였다고 생각합니다. 하지만, 해커톤의 제한된 시간 안에서는 **주요 기능 구현이 무엇보다 중요하다는 점을 제가 잊지 않고 구현의** 우선순위를 조정했어야 했습니다.
+개발 과정에서 팀원이 서비스의 안정성을 높이기 위해 예외 처리에 많은 시간을 투자했습니다. 특히, 다음 날 다른 참가자들이 서비스를 직접 사용해볼 수 있었기 때문에 안정성도 중요한 요소였다고 생각합니다. 하지만, 해커톤의 제한된 시간 안에서는 **주요 기능 구현이 무엇보다 중요하다**는 점을 제가 잊지 않고 구현의 우선순위를 조정했어야 했습니다.
 
 당시, 적절한 시점에 개입하지 못해 결국 핵심 기능을 본격적으로 작업하기 시작한 시점은 이미 아침 10시가 되었고, 그때 서버 API에 문제가 있다는 사실도 뒤늦게 알게 되었습니다. 시간이 너무 촉박한 상황이었기에 결국 이 중요한 기능을 완성하지 못한 채 마무리해야 했습니다. 이 경험을 통해 **시간이 제한된 환경에서는 주요 기능을 완성한 뒤 안정성과 디테일을 보완하는 방향으로 우선순위를 설정하는 것이 중요**하다는 사실을 알게 되었습니다.
 
