--- a/posts/bbiyakton.mdx
+++ b/posts/bbiyakton.mdx
@@ -107,7 +107,7 @@ image: "bbiyakton/1.png"
 
 <img width="800rem" src="/images/bbiyakton/9.png" />
 
-첫 번째 타임에는 다른 팀의 부스를 구경했습니다. 많은 팀이 이미 서비스를 배포한 상태였고, 디자이너를 둔 팀이 대부분이어서 그런지 서비스 소개 영상이나 발표 슬라이드로 서비스를 멋있게 소개하는 팀이 많았습니다. 특히, 창의적이고 재미있는 아이디어들이 많아 직접 사용해보며 하루 만에 이런 서비스를 만들었다는 점에 놀라움을 느꼈습니다.
+첫 번째 타임에는 다른 팀의 부스를 구경했습니다. 많은 팀이 이미 서비스를 배포한 상태였고, 서비스 소개 영상이나 발표 슬라이드로 서비스를 멋있게 소개하는 팀이 많았습니다. 특히, 창의적이고 재미있는 아이디어들이 많아 직접 사용해보며 하루 만에 이런 서비스를 만들었다는 점에 놀라움을 느꼈습니다.
 
 두 번째 타임에는 제가 부스 운영을 맡아 서비스 소개를 담당했습니다. 발표 자료도 따로 준비하지 못했고, 서비스도 완성하지 못한 상태였기에 어떻게 설명해야 할지 고민이 많았습니다. 그래서 최대한 서비스를 기획한 배경에서 공감을 이끌어내는 방식으로 접근하기로 했습니다. 부스 운영 자체가 네트워킹과 비슷한 상황이었기 때문에 이를 네트워킹에 빗대어 저희 서비스의 필요성을 설명했습니다. 구현된 기능 중 완성한 기능은 배포된 서비스에서 직접 보여드렸고, 완성하지 못한 부분은 Figma를 활용해 서비스 흐름을 이해할 수 있도록 설명하려고 노력했습니다.
 
