--- a/posts/bbiyakton.mdx
+++ b/posts/bbiyakton.mdx
@@ -10,7 +10,7 @@ image: "bbiyakton/1.png"
 
 지난 12월, 우연히 Festa에서 ‘삐약톤’이라는 해커톤 모집 공고를 보게 되었습니다. 당시 부스트캠프 멤버십 과정을 막 마친 시점이었고, 여유로운 시간을 보내고 있던 터라 오랜만에 해커톤에 나가볼까 고민했습니다. 이전에 세 번 정도 해커톤에 참여했던 경험이 있는데, 짧은 시간 동안 몰입하며 열정을 불태우는 그 특별한 재미가 다시 떠올랐습니다. 더불어, 졸업생 신분으로 참가할 수 있는 몇 안 되는 대회라는 점도 큰 매력으로 다가와 삐약톤에 참여하기로 결심했습니다!
 
-<img width="800rem" src="/images/bbiyakton/2.png" />
+<img width="700rem" src="/images/bbiyakton/2.png" />
 
 ## 팀원 모으기
 
@@ -22,7 +22,7 @@ image: "bbiyakton/1.png"
 
 원래 해커톤 일정은 12월 14일(토) ~ 15일(일)이었지만, 행사 내부 사정과 참가팀 미달로 인해 한 달 뒤인 **1월 11일(토) ~ 12일(일)로 연기**되었습니다.
 
-<img width="800rem" src="/images/bbiyakton/3.png" />
+<img width="700rem" src="/images/bbiyakton/3.png" />
 
 1월 달에는 부스트캠프에서 진행하는 CS 리팩토링 과정에 참여할 예정이었기에 주말 밤샘이 부담되었지만, 한 팀원이 "이 시간을 기회로 삼아 한 달 동안 서로 합을 맞춰보자"는 좋은 제안을 했고, 가벼운 todo 프로젝트를 통해 협업 연습을 하기로 했습니다.
 
@@ -52,11 +52,11 @@ image: "bbiyakton/1.png"
 
 연사 세션이 끝난 뒤, 해커톤의 주제가 발표되었습니다. 이번 대회의 주제는 **삐약이(초보)들의 문제를 해결하자**였습니다. 주제를 보며 저희가 공감할 수 있는 문제를 해결할 수 있을 것 같아 해커톤이 더욱 기대되었습니다.
 
-<img width="800rem" src="/images/bbiyakton/6.png" />
+<img width="700rem" src="/images/bbiyakton/6.png" />
 
 심사 기준은 **주제 적합성, 가설 설득력, 실행력**이었습니다. 주제 적합성과 가설 설득력은 9점이지만 실행력이 6점인 것으로 보아 기능 개발의 완성도보단 기획이 얼마나 적합하고 설득력있는지가 중요해 보였습니다.
 
-<img width="800rem" src="/images/bbiyakton/7.png" />
+<img width="700rem" src="/images/bbiyakton/7.png" />
 
 ## 함께 만들어 나가는 아이디어
 
@@ -74,7 +74,7 @@ image: "bbiyakton/1.png"
 
 생각보다 아이디어가 빨리 정해져서 다행이라고 생각했지만 이후 와이어프레임을 그리고 디자인을 완성하는 작업이 오래 걸렸습니다. 디자인에 큰 치중을 두지 않아도 될줄 알았는데 해커톤 현장에서 대부분의 팀에 디자이너가 있다는 것을 알게 되어 더 신경 쓰게 되었고, 결국 밤 11시가 되어서야 디자인이 마무리되었습니다.
 
-<img width="800rem" src="/images/bbiyakton/8.png" />
+<img width="700rem" src="/images/bbiyakton/8.png" />
 ## 개발 과정 속 마주친 어려움
 
 본격적인 개발은 밤 11시부터 시작되었습니다. 다행히 제가 디자인을 마무리하는 동안 프론트엔드 팀원이 프로젝트 세팅을 미리 완료해 준 덕분에 작업을 바로 시작할 수 있었습니다.
@@ -97,15 +97,15 @@ image: "bbiyakton/1.png"
 
 ### 완벽한 것보다 완성된 것이 낫다
 
-개발 과정에서 팀원이 서비스의 안정성을 높이기 위해 예외 처리에 많은 시간을 투자했습니다. 특히, 다음 날 다른 참가자들이 서비스를 직접 사용해볼 수 있었기 때문에 안정성도 중요한 요소였다고 생각합니다. 하지만, 해커톤의 제한된 시간 안에서는 **주요 기능 구현이 무엇보다 중요하다**는 점을 제가 잊지 않고 구현의 우선순위를 조정했어야 했습니다.
+개발 과정에서 팀원이 서비스의 안정성을 높이기 위해 예외 처리에 많은 시간을 투자했습니다. 특히, 다음 날 다른 참가자들이 서비스를 직접 사용해볼 수 있었기 때문에 저 또한 안정성도 중요한 요소였다고 생각했습니다. 하지만, 해커톤의 제한된 시간 안에서는 **주요 기능 구현이 무엇보다 중요하다**는 점을 잊지 않고 우선 모든 서비스를 구현하는 것에 초점을 두어야 했습니다.
 
-당시, 적절한 시점에 개입하지 못해 결국 핵심 기능을 본격적으로 작업하기 시작한 시점은 이미 아침 10시가 되었고, 그때 서버 API에 문제가 있다는 사실도 뒤늦게 알게 되었습니다. 시간이 너무 촉박한 상황이었기에 결국 이 중요한 기능을 완성하지 못한 채 마무리해야 했습니다. 이 경험을 통해 **시간이 제한된 환경에서는 주요 기능을 완성한 뒤 안정성과 디테일을 보완하는 방향으로 우선순위를 설정하는 것이 중요**하다는 사실을 알게 되었습니다.
+당시, 적절한 시점에 개입하지 못해 결국 핵심 기능을 본격적으로 작업하기 시작한 시점은 이미 아침 10시가 되었고, 그때 서버 API에 문제가 있다는 사실도 뒤늦게 알게 되었습니다. 시간이 너무 촉박한 상황이었기에 결국 가장 중요했던 기능을 완성하지 못한 채 마무리해야 했습니다. 이 경험을 통해 **시간이 제한된 환경에서는 주요 기능을 완성한 뒤 안정성과 디테일을 보완하는 방향으로 우선순위를 설정하는 것이 중요**하다는 사실을 알게 되었습니다.
 
 ## 심사
 
 심사는 세 타임으로 나누어 진행되었고, 한 타임당 6~7팀이 심사위원 앞에서 서비스를 발표했습니다. 심사를 받지 않는 팀들은 부스를 운영하며 다른 팀들의 프로젝트를 구경하거나 본인의 서비스를 소개했습니다. 저희 팀은 마지막 순서였기 때문에 첫 두 타임 동안 번갈아가며 부스를 운영하기로 했습니다.
 
-<img width="800rem" src="/images/bbiyakton/9.png" />
+<img width="700rem" src="/images/bbiyakton/9.png" />
 
 첫 번째 타임에는 다른 팀의 부스를 구경했습니다. 많은 팀이 이미 서비스를 배포한 상태였고, 서비스 소개 영상이나 발표 슬라이드로 서비스를 멋있게 소개하는 팀이 많았습니다. 특히, 창의적이고 재미있는 아이디어들이 많아 직접 사용해보며 하루 만에 이런 서비스를 만들었다는 점에 놀라움을 느꼈습니다.
 
@@ -117,7 +117,7 @@ image: "bbiyakton/1.png"
 
 총 21팀 중 3팀이 최우수상, 우수상, 인기상을 받는데 저희 팀이 놀랍게도 **우수상**을 받게 되었습니다..!
 
-<img width="800rem" src="/images/bbiyakton/10.png" />
+<img width="700rem" src="/images/bbiyakton/10.png" />
 
 다른 팀처럼 발표 자료도 멋있게 못 만들고 완성을 못했기 때문에 당연히 수상을 못할 줄 알아서 우수상에서 저희 팀 이름인 “요즘잘자쿨냥이”이 호명되었을 때 정말 깜짝 놀랐습니다. 팀원 모두 예상을 못했던지라 처음에 정적이 흘렀던 것이 기억납니다. ㅋㅋ
 
