--- a/posts/bbiyakton.mdx
+++ b/posts/bbiyakton.mdx
@@ -1,5 +1,5 @@
 ---
-title: "삐약톤 우수상 후기: 리더에 대한 고찰"
+title: "삐약톤 우수상 후기"
 publishedAt: "2025-01-28"
 summary: "지난 12월, 우연히 Festa에서 ‘삐약톤’이라는 해커톤 모집 공고를 보게 되었습니다. 당시 부스트캠프 멤버십 과정을 막 마친 시점이었고, 여유로운 시간을 보내고 있던 터라 오랜만에 해커톤에 나가볼까 고민했습니다."
 tags: "GDG DevFest, 해커톤, 삐약톤, 회고"
@@ -8,53 +8,49 @@ image: "bbiyakton/1.png"
 
 # 또 다시 도전한 해커톤
 
-지난 12월, 우연히 Festa에서 ‘삐약톤’이라는 해커톤 모집 공고를 보게 되었습니다. 당시 부스트캠프 멤버십 과정을 막 마친 시점이었고, 여유로운 시간을 보내고 있던 터라 오랜만에 해커톤에 나가볼까 고민했습니다. 이전에 세 번 정도 해커톤에 참여했던 경험이 있는데, 짧은 시간 동안 몰입하며 열정을 불태우는 그 특별한 재미가 다시 떠올랐습니다. 더불어, 졸업생 신분으로 참가할 수 있는 몇 안 되는 대회라는 점도 큰 매력으로 다가와 삐약톤에 참여하기로 결심했습니다!
+지난 12월 우연히 Festa에서 ‘삐약톤’이라는 해커톤 모집 공고를 보게 되었습니다. 당시 부스트캠프 멤버십 과정을 막 마친 시점이었고 여유로운 시간을 보내고 있던 터라 오랜만에 해커톤에 나가볼까 고민했습니다. 이전에 세 번 정도 해커톤에 참여했던 경험이 있는데, 짧은 시간 동안 몰입하며 열정을 불태우는 경험을 다시 해보고 싶다는 생각이 들어 삐약톤에 참여하기로 결심했습니다.
 
 <img width="700rem" src="/images/bbiyakton/2.png" />
 
 # 팀원 모으기
 
-참가를 결심한 뒤 곧바로 팀원을 모집하기 시작했습니다. 해커톤은 시간이 생명이기에 최소 인원인 4명으로 팀을 꾸리기로 했습니다. 4명이라면 의견을 빠르게 모으고 의사결정도 효율적으로 진행할 수 있을 것이라 판단했습니다. 또한 팀 구성에 직군에 제한이 없었는데 제가 figma를 빠르게 다룰 수 있어서 디자이너 없이 진행하기로 했습니다. _(이 결정은 나중에 큰 실수가 되며…)_
-
-부스트캠프에서 함께 프로젝트를 진행하며 친해진 동료에게 먼저 제안했고, 다행히 프론트엔드 팀원 한 명이 흔쾌히 참여를 결정했습니다. 이후 그 팀원이 백엔드 팀원 두 명을 섭외해 주어 프론트엔드 2명, 백엔드 2명으로 총 4명의 팀을 완성할 수 있었습니다.
+참가를 결심한 뒤 곧바로 팀원을 모집하기 시작했습니다. 해커톤은 시간이 생명이기에 의견을 빠르게 모으고 의사결정도 효율적으로 진행할 수 있도록 소수 인원으로 진행하고자 했습니다. 팀 구성에 직군에 제한이 없었어서 제가 디자인까지 하기로 하고 부스트캠프에서 함께 프로젝트를 진행하며 친해진 동료들에게 연락해 프론트엔드 2명, 백엔드 2명으로 총 4명으로 팀을 구성했습니다.
 
 # 연기된 일정으로 갖게 된 준비 시간
 
-원래 해커톤 일정은 12월 14일(토) ~ 15일(일)이었지만, 행사 내부 사정과 참가팀 미달로 인해 한 달 뒤인 **1월 11일(토) ~ 12일(일)로 연기**되었습니다.
+원래 해커톤 일정은 12월 14일(토) ~ 15일(일)이었지만, 행사 내부 사정과 참가팀 미달로 인해 한 달 뒤인 1월 11일(토) ~ 12일(일)로 연기되었습니다.
 
 <img width="700rem" src="/images/bbiyakton/3.png" />
 
-1월 달에는 부스트캠프에서 진행하는 CS 리팩토링 과정에 참여할 예정이었기에 주말 밤샘이 부담되었지만, 한 팀원이 "이 시간을 기회로 삼아 한 달 동안 서로 합을 맞춰보자"는 좋은 제안을 했고, 가벼운 todo 프로젝트를 통해 협업 연습을 하기로 했습니다.
+1월 달에는 부스트캠프에서 진행하는 CS 리팩토링 과정에 참여할 예정이었기에 주말 밤샘이 부담되었지만 한 팀원이 이 시간을 기회로 삼아 한 달 동안 서로 합을 맞춰보자 제안했고, 가벼운 todo 프로젝트를 통해 협업 연습을 하기로 했습니다.
 
-부스트캠프에서 백엔드 분들과 합을 맞춰보는 경험을 하지 못했기 때문에, 이번 기회에 BE 분들과 호흡을 맞춰보는 것도 의미 있다고 생각했습니다. 덕분에 한 달 동안 서로 합을 맞추면서 장난도 많이 치고 친해져서 편안한 분위기가 조성되었습니다. 또한, 이번 해커톤에서 제가 리더를 맡게 되었습니다. 아무래도 해커톤 경험이 가장 많다 보니 자연스럽게 리더 역할을 맡게 된 것 같습니다.
+부스트캠프에서 백엔드 분들과 합을 맞춰보는 경험을 하지 못했기 때문에, 이번 기회에 BE 분들과 호흡을 맞춰보는 것도 의미 있다고 생각했습니다. 덕분에 한 달 동안 서로 합을 맞추면서 장난도 많이 치고 친해져서 서로 꽤 친해질 수 있었습니다. 또 아무래도 제가 해커톤 경험이 가장 많다 보니 자연스럽게 리더 역할을 맡게 되었습니다.
 
 # 해커톤 당일: 오프닝
 
-드디어 해커톤 당일, 오전 10시 30분부터 체크인이 시작되었습니다. 웰컴 키트로 받은 풍성한 간식 덕분에 시작부터 기분이 좋았습니다.ㅎㅎ 하지만 강의실 형태의 공간에서 진행된 탓에 책상과 의자가 붙어 있어 팀원들과 마주 보고 회의하기에 다소 불편하겠다는 생각이 들었습니다. 그래도 준비된 공간에서 최선을 다해 하루를 보내기로 마음먹었습니다.
+해커톤 당일에는 우선 연사 세션부터 이어졌습니다.
 
 <img width="500rem" src="/images/bbiyakton/4.png" />
 
 # 연사 세션
 
-이어진 연사 세션에서는 두 가지 주제로 강연이 진행되었습니다.
+연사 세션에서는 두 가지 주제로 강연이 진행되었습니다.
 
 <img width="500rem" src="/images/bbiyakton/5.png" />
 
-첫 번째 강연의 주제는 **GPT 세상에서 프론트엔드 커리어의 방향**이었습니다. 프론트엔드 지망생으로서 특히 관심을 갖고 들을 수 있었습니다. 연사님은 "앞으로 판단력 있는 개발자가 되어야 하며, 이를 위해 기초가 중요하다"고 강조하셨습니다. 문제 해결 역량을 키우기 위해서는 빠르게 다작하며 경험을 쌓는 것이 중요하다는 조언도 기억에 남았습니다. 강연을 들으며 앞으로는 단순히 기술을 공부하는 것에서 그치지 않고, React 프레임워크 딥다이브, CS 지식 강화, JavaScript 심화 학습 등 깊이 있는 학습을 꾸준히 해야겠다는 다짐을 하게 되었습니다.
+첫 번째 강연의 주제는 GPT 세상에서 프론트엔드 커리어의 방향이었습니다. AI가 급속도로 발전하는 요즘, 개발자로서 어떻게 생존해야 할지 고민이 많았기에 더욱 관심 깊게 들었습니다. 연사님은 "앞으로는 판단력 있는 개발자가 되어야 하며, 이를 위해서는 탄탄한 기초가 필수"라고 강조하셨습니다. 문제 해결 역량을 기르려면 빠르게 많은 것을 만들어보며 경험을 쌓는 것이 중요하다는 조언도 인상 깊었습니다. 단순히 기술을 익히는 것을 넘어 판단력을 키우려면 경험에서 나오는 직관을 기르는 것이 중요하다는 새로운 관점을 배울 수 있었습니다.
 
-두 번째 강연은 **개발 커뮤니티, 나만의 무기로 만들기**라는 주제였습니다. 연사님은 개발 커뮤니티에서 타인을 경쟁자가 아니라 함께 성장하는 동료로 보는 점이 큰 장점이라고 말씀하시며, 이를 잘 활용해 자신만의 차별화를 만들어가라고 조언하셨습니다. 저 역시 처음 개발을 시작했을 때 이런 문화에 매료되어 개발을 더욱 좋아하게 되었던 순간이 떠올랐습니다. 연사님은 블로그 글 작성이나 네트워킹 참여 등을 통해 커뮤니티에 기여할 수 있다고 말씀하셨고, 단순한 기술 정리 글이 아닌 **개인적인 탐구 과정과 배운 점을 담은 글을 작성해야** 커뮤니티에서 차별화된 경험을 쌓을 수 있다고 조언하셨습니다.
+두 번째 강연은 개발 커뮤니티, 나만의 무기로 만들기라는 주제였습니다. 연사님은 개발 커뮤니티의 가장 큰 장점이 타인을 경쟁자가 아닌 함께 성장하는 동료로 바라보는 문화라며, 이를 활용해 자신만의 차별화를 만들어가라고 조언하셨습니다. 블로그 작성이나 네트워킹 참여를 통해 커뮤니티에 기여할 수 있고, 특히 단순한 기술 정리가 아닌 개인적인 탐구 과정과 깨달음을 담은 글을 써야 차별화된 경험을 쌓을 수 있다고 말씀하셨습니다. 처음 개발을 시작했을 때 이런 문화에 매료되어 개발을 더욱 좋아하게 되었던 기억이 떠올랐습니다.
 
-두 연사님의 공통된 메시지는 "생각하고 판단할 줄 아는 개발자가 되어라"는 것이었고, 이를 위해 끊임없이 배우고 탐구하는 자세가 필요하다는 점이었습니다. **호기심을 바탕으로 새로운 공부거리를 찾고, 스스로 의문을 던지며 학습해가는 주도적인 태도**를 잃지 말아야겠다고 생각했습니다.
-
-두 연사님의 말씀이 너무 도움이 많이 되어 이런 세션을 마련해준 GDG 측에 깊은 감사를 느꼈습니다… ❤️
+두 강연을 통해 얻은 핵심 메시지는 "생각하고 판단할 줄 아는 개발자가 되어야 한다"는 것이었습니다. 이를 위해서는 끊임없이 배우고 탐구하는 자세가 필요합니다. AI 시대에 살아남으려면 호기심을 바탕으로 새로운 학습 주제를 찾고, 스스로 질문을 던지며 주도적으로 학습하는 태도를 잃지 말아야겠다는 다짐을 하게 되었습니다.
 
 # 드디어 해커톤 시작: 주제와 심사기준
 
-연사 세션이 끝난 뒤, 해커톤의 주제가 발표되었습니다. 이번 대회의 주제는 **삐약이(초보)들의 문제를 해결하자**였습니다. 주제를 보며 저희가 공감할 수 있는 문제를 해결할 수 있을 것 같아 해커톤이 더욱 기대되었습니다.
+연사 세션이 끝난 뒤, 해커톤의 주제가 발표되었습니다. 이번 대회의 주제는 삐약이(초보)들의 문제를 해결하자였습니다.
 
 <img width="700rem" src="/images/bbiyakton/6.png" />
 
-심사 기준은 **주제 적합성, 가설 설득력, 실행력**이었습니다. 주제 적합성과 가설 설득력은 9점이지만 실행력이 6점인 것으로 보아 기능 개발의 완성도보단 기획이 얼마나 적합하고 설득력있는지가 중요해 보였습니다.
+심사 기준은 주제 적합성, 가설 설득력, 실행력이었습니다. 주제 적합성과 가설 설득력은 9점이지만 실행력이 6점인 것으로 보아 기능 개발의 완성도보단 기획이 얼마나 적합하고 설득력있는지가 중요해 보였습니다.
 
 <img width="700rem" src="/images/bbiyakton/7.png" />
 
@@ -72,7 +68,7 @@ image: "bbiyakton/1.png"
 
 # 예상치 못한 디자인 작업의 부담
 
-생각보다 아이디어가 빨리 정해져서 다행이라고 생각했지만 이후 와이어프레임을 그리고 디자인을 완성하는 작업이 오래 걸렸습니다. 디자인에 큰 치중을 두지 않아도 될줄 알았는데 해커톤 현장에서 대부분의 팀에 디자이너가 있다는 것을 알게 되어 더 신경 쓰게 되었고, 결국 밤 11시가 되어서야 디자인이 마무리되었습니다.
+생각보다 아이디어가 빨리 정해져서 다행이라고 생각했지만 이후 와이어프레임을 그리고 디자인을 완성하는 작업이 오래 걸렸습니다…(이때부터 좀 긴장되기 시작)
 
 <img width="700rem" src="/images/bbiyakton/8.png" />
 
@@ -82,7 +78,7 @@ image: "bbiyakton/1.png"
 
 이후에는 역할을 분담해 개발을 시작했습니다. 다른 FE 팀원은 꼼꼼한 편이고, QR을 만들어 본 적이 있어서 로그인 페이지, 기본 프로필 등록 페이지, QR 페이지를 맡았고, 저는 비교적 작업 속도가 빠른 편이라 UI가 복잡하고 API 연동이 많은 행사 리스트 페이지, 행사 세부 페이지, 행사별 프로필 등록 페이지, 프로필 보기 페이지를 담당했습니다.
 
-순조롭게 개발이 진행되었다면 좋았겠지만, 하루라는 짧은 시간 동안 여러 난관에 부딪히며 어려움을 겪었습니다. 😵‍💫
+순조롭게 개발이 진행되었다면 좋았겠지만 하루라는 짧은 시간 동안 여러 난관에 부딪히며 어려움을 겪었습니다. 😵‍💫
 
 ## 새로운 아이디어의 도입과 시행착오
 
@@ -91,10 +87,6 @@ image: "bbiyakton/1.png"
 ## 로컬에서는 안되고 배포 환경에서는 되는 문제
 
 개발 도중 프론트 쪽 작업량이 너무 많아서 백엔드 팀원분이 감사하게도 일부 프론트엔드 코드 작성을 도와주셨습니다. 그런데 그 코드에 `withCredentials`가 누락되어 쿠키 전달이 되지 않는 문제가 발생했습니다. 분명 주신 코드를 읽었는데도 새벽에 정신이 없어서 문제를 제대로 파악하지 못해 결국 이 문제로 두 시간을 허비하고 말았습니다. 도움을 주신 팀원의 호의를 제대로 활용하지 못한 것 같아 아쉬웠습니다. 😭
-
-## 완성을 위해
-
-마지막 날, 부스를 운영하며 완성된 서비스를 선보이고 싶다는 목표와 팀원들과 "꼭 서비스를 배포하자"고 약속을 했던터라 끝까지 완성하기 위해 노력했습니다. 다만, 이 과정에서 작업에 몰두하느라 아침 9시부터는 필요한 말만 하며 팀원들과의 대화가 최소화되어 아쉬움으로 남았습니다. 앞으로는 작업의 완성도뿐 아니라 **소통의 균형**을 유지하며 모두가 만족스러운 결과를 낼 수 있는 팀원이 되어야겠다고 생각했습니다.
 
 ## 완벽한 것보다 완성된 것이 낫다
 
@@ -130,24 +122,16 @@ image: "bbiyakton/1.png"
 
 (참고로 상금으로 받은 30만 원으로 금돼지식당에서 맛있는 돼지고기를 먹으며 회식도 했습니다. ㅎㅎ)
 
-# 회고: 더 나은 리더였더라면
+# 회고
 
-이번 해커톤에서 가장 크게 느낀 점은 **정말 바빴다**는 것이었습니다. 해야 할 일이 너무 많았고, 쉬지 않고 일했음에도 결국 서비스를 완성하지 못했습니다. 무엇이 문제였을까요?
+이번 해커톤에서 가장 크게 느낀 점은 정말 바빴다는 것이었습니다. 해야 할 일이 너무 많았고, 쉬지 않고 작업했음에도 결국 서비스를 완성하지 못해 아쉬웠습니다.
 
-저는 이번 해커톤에서 디자이너, 프론트엔드 개발자, 그리고 **리더**의 역할을 맡았습니다. 하지만 각 역할의 균형을 잡는 것이 쉽지 않았습니다. 스스로 너무 많은 작업을 처리하려다 보니, 리더로서의 핵심 역할인 **팀원들의 진행 상황을 관리하고 문제를 해결하며, 팀을 올바른 방향으로 이끄는 일**에 충분히 집중하지 못했습니다.
+물론 하루 밤새 만들기에는 어떤 서비스든 시간이 부족했겠지만, 디자이너를 섭외했다면 조금 달랐을까 하는 생각이 들었습니다. 하지만 그랬다면 커뮤니케이션 비용이 추가로 발생하고, 디자인 작업 진행 속도에 따라 프론트엔드 작업이 영향을 받을 수도 있어서 과연 좋은 선택이었을지는 의문입니다. 작업량이 너무 많아 계속 작업했는데도 끝내지 못한 것이 가장 아쉬웠습니다.
 
-<img width="600rem" src="/images/bbiyakton/12.png" />
-
-물론 팀원들의 의견을 수렴하고, 짧은 시간 안에 아이디어를 정리해 기획을 완성하는 등 리더로서 조율하려는 노력을 기울였지만, 디자인과 프론트엔드 작업에 많은 시간을 쏟다 보니 정작 **팀원들에게 구체적인 조언을 제공하거나 문제 해결의 방향성을 제시하는 역할**은 제대로 수행하지 못했습니다. 특히, 문제가 발생했을 때 상황을 확인하는 데 그치고, 팀원들이 스스로 해결하도록 맡긴 부분이 아쉬움으로 남습니다.
-
-이번 경험을 통해 배운 점은 **리더가 모든 일을 직접 처리하려고 해서는 안 된다**는 것입니다. 리더는 팀원을 믿고 맡기며, **팀 전체가 궁극적인 목표를 향해 올바르게 나아갈 수 있도록 상황을 조율하고 방향을 제시하는 역할**에 집중해야 한다는 점을 깨달았습니다.
-
-첫 번째로 얻은 교훈은 **역할 분담의 중요성**입니다. 제가 디자인에 많은 시간을 쏟지 않고 디자이너를 섭외했더라면, 개발과 팀 전체 상황을 더 잘 관리하며 팀원들을 적절히 지원할 수 있었을 것입니다. 두 번째로는 **사소한 것에 집착하기보다 큰 그림을 보고, 팀이 직면한 문제를 효과적으로 해결할 수 있도록 돕는 것**이 리더로서의 핵심 역할이라는 점이었습니다.
+회고해보니 중간에 사소한 디테일에 신경 쓰느라 핵심 기능 구현을 놓친 부분이 아쉽습니다. 비록 완벽하지는 않았지만, 더 나은 팀원이 되기 위한 소중한 경험이었다고 생각합니다.
 
 # 앞으로 나아갈 방향
 
 해커톤 이후, 저희 모두 서비스의 완성하지 못했던 기능을 개선하고 리팩토링하여 실제로 운영해보고 싶다는 생각을 가지게 되었습니다. 우선 2월까지 기존 기획대로 기능을 모두 완성하고, 이후 서비스를 발전시켜 나가기로 했습니다. 해커톤 당시에는 시간이 부족해 기술적으로 깊이 있는 작업을 하지 못했기 때문에, 연사 세션에서 강조되었던 것처럼 더 깊이 있는 공부를 하며 개발 역량을 키우겠다는 다짐도 함께 했습니다. 그리고 이제는 전체적인 일의 진행 상황을 모두가 트래킹할 수 있도록 github project나 jira와 같은 프로젝트 관리 툴도 충분히 활용할 것입니다. 완성될 저희 서비스를 기대해 주세요. ㅎㅎ
-
-또한, 앞으로는 제가 맡은 역할에 충실하기로 했습니다. 리더로서 팀 전체를 더 잘 이끌어갈 수 있기 위해 노력할 것이며, 팀원으로서는 신뢰를 줄 수 있는 동료, 그리고 팀의 목표를 이루기 위해 함께 성장하는 사람이 되고자 합니다.
 
 <img width="300rem" src="/images/bbiyakton/13.png" />
