--- a/posts/ci-semantic.mdx
+++ b/posts/ci-semantic.mdx
@@ -53,7 +53,7 @@ TailwindCSS 팀은 `v4.0.7`에서 해당 문제가 고쳐졌다고 합니다.
 
 그래서 아래처럼 package.json에 최신 버전을 직접 명시해 문제를 해결했습니다.
 
-```jsx
+```json
 {
   "@tailwindcss/postcss": "^4.1.3",
   "tailwindcss": "^4.1.3"
