post: 블로그글 수정

--- a/posts/ci-semantic.mdx
+++ b/posts/ci-semantic.mdx
@@ -67,7 +67,7 @@ TailwindCSS 팀은 `v4.0.7`에서 해당 문제가 고쳐졌다고 합니다.
   설치될 때 설치가 중단된다고 합니다.
 </aside>
 
-# 캐럿`^`이 무엇인지 복습하자
+# 캐럿이 무엇인지 복습하자
 
 이번 이슈를 해결하면서 package.json에 버전을 명시할 때 버전 앞에 붙는 틸드 `~` 와 함께 자주 쓰이는 캐럿 `^` 이 무슨 뜻인지 다시 한 번 정리해보고자 합니다.
 
