--- a/posts/bbiyakton.mdx
+++ b/posts/bbiyakton.mdx
@@ -124,11 +124,13 @@ image: "bbiyakton/1.png"
 
 # 회고
 
-이번 해커톤에서 가장 크게 느낀 점은 정말 바빴다는 것이었습니다. 해야 할 일이 너무 많았고, 쉬지 않고 작업했음에도 결국 서비스를 완성하지 못해 아쉬웠습니다.
+이번 해커톤을 통해 가장 크게 느낀 점은 정말 바쁘고 시간이 부족했다는 것이었습니다. 하루 밤을 꼬박 새워 무언가를 만들어낸다는 것이 얼마나 빠른 판단과 집중을 요구하는 일인지 다시금 실감할 수 있었습니다.
 
-물론 하루 밤새 만들기에는 어떤 서비스든 시간이 부족했겠지만, 디자이너를 섭외했다면 조금 달랐을까 하는 생각이 들었습니다. 하지만 그랬다면 커뮤니케이션 비용이 추가로 발생하고, 디자인 작업 진행 속도에 따라 프론트엔드 작업이 영향을 받을 수도 있어서 과연 좋은 선택이었을지는 의문입니다. 작업량이 너무 많아 계속 작업했는데도 끝내지 못한 것이 가장 아쉬웠습니다.
+디자이너 없이 진행한 것이 아쉬움으로 남기는 했지만, 만약 디자이너를 섭외했다면 커뮤니케이션이나 협업 속도 등 다른 과제가 생겼을지도 모른다는 생각도 듭니다. 그런 면에서 선택의 장단점을 직접 경험해본 것도 큰 배움이었습니다.
 
-회고해보니 중간에 사소한 디테일에 신경 쓰느라 핵심 기능 구현을 놓친 부분이 아쉽습니다. 비록 완벽하지는 않았지만, 더 나은 팀원이 되기 위한 소중한 경험이었다고 생각합니다.
+또한 회고해보니 중간중간 사소한 디테일에 집착하다가 오히려 핵심 기능 구현에 충분히 집중하지 못했던 점이 아쉽게 느껴졌습니다. 하지만 그 과정을 통해 무엇을 우선순위로 두어야 하는지, 어떻게 팀 전체의 완성도를 조율해야 하는지에 대한 감각을 기를 수 있었던 것 같습니다.
+
+무엇보다도 밤새 팀원들과 함께 고민하고 열정을 쏟으며 개발에 몰입했던 그 시간 자체가 정말 소중한 경험이었습니다. 완벽하진 않았지만, 더 나은 팀원, 더 나은 개발자가 되기 위한 한 걸음이었다고 생각합니다. 그리고 이 과정을 통해 제 안의 개발에 대한 열정을 다시 한 번 확인할 수 있어 정말 뜻깊었습니다.
 
 # 앞으로 나아갈 방향
 
